--- a/composer.json
+++ b/composer.json
@@ -12,21 +12,22 @@
 	"minimum-stability": "stable",
 	"require": {},
 	"require-dev": {
-		"jakub-onderka/php-parallel-lint": "1.0.0",
-		"jakub-onderka/php-console-highlighter": "0.3.2",
-		"mediawiki/mediawiki-codesniffer": "24.0.0",
-		"mediawiki/minus-x": "0.3.1",
-		"phpmd/phpmd": "~2.1"
+		"mediawiki/mediawiki-codesniffer": "41.0.0",
+		"mediawiki/minus-x": "1.1.1",
+		"phpmd/phpmd": "~2.1",
+		"php-parallel-lint/php-console-highlighter": "1.0.0",
+		"php-parallel-lint/php-parallel-lint": "1.3.2"
 	},
 	"scripts": {
 		"test": [
-			"parallel-lint . --exclude vendor",
-			"phpcs -p -s",
-			"minus-x check ."
+			"parallel-lint . --exclude vendor --exclude node_modules",
+			"minus-x check .",
+			"@phpcs"
 		],
 		"fix": [
 			"minus-x fix .",
 			"phpcbf"
-		]
+		],
+		"phpcs": "phpcs -sp --cache"
 	}
 }
